// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address/geocoding/nominatim Geocode when all inputs are correct should geocode address to geographical coordinates 1`] = `
Ok {
  "value": Object {
    "latitude": "50.0596288",
    "longitude": "14.446459273258009",
  },
}
`;

exports[`address/geocoding/nominatim Geocode when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Unable to find geolocation coordinates for address: \\"
}
AST Path: definitions[0].statements[1].responseHandlers[0].statements[0]
Original Map Location: Line 24, column 7",
}
`;

exports[`address/geocoding/nominatim ReverseGeocode when all inputs are correct should reverse geocode geographical coordinates 1`] = `
Ok {
  "value": Array [
    Object {
      "addressCountry": "us",
      "addressLocality": "Brooklyn, New York",
      "addressRegion": "undefined, New York",
      "formattedAddress": "281, Bedford Avenue, Williamsburg, Brooklyn, New York, 11211, United States",
      "postalCode": "11211",
      "streetAddress": "281 Bedford Avenue",
    },
  ],
}
`;

exports[`address/geocoding/nominatim ReverseGeocode when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Bad request\\",
  \\"detail\\": \\"Need coordinates or OSM object to lookup.\\"
}
AST Path: definitions[1].statements[0].responseHandlers[1].statements[0]
Original Map Location: Line 137, column 7",
}
`;
